spacing fixed for the review elements

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -89,4 +89,5 @@ input, textarea {
     border-radius: 20px;
     margin-right: 15px;
     color: white;
+    user-select: none; 
 }
